@@ -14,6 +14,9 @@ Authority.authority = cpan:FLORA
 
 [ContributorsFromGit]
 
+[Prereqs / RuntimeRecommends]
+Package::Stash::XS = 0
+
 [Prereqs / DevelopRequires]
 Moose = 0
 
